Deleting force field doesn't remove "Surface" from modifier stack #52498

Closed
opened 2017-08-22 19:21:36 +02:00 by Serge Lyatin · 15 comments

System Information
Win7 64bit

Blender Version
Broken: 2.78c

Exact steps for others to reproduce the error
Press X in Physics tab to remove Force Field, go to modifier stack -> Surface is still here
SurfaceForce.blend

**System Information** Win7 64bit **Blender Version** Broken: 2.78c **Exact steps for others to reproduce the error** Press X in Physics tab to remove Force Field, go to modifier stack -> Surface is still here [SurfaceForce.blend](https://archive.blender.org/developer/F721588/SurfaceForce.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @SergeL

Added subscriber: @SergeL

Added subscriber: @zeauro

Added subscriber: @zeauro

I confirm the problem with attached blend but I can't reproduce from scratch with 2.78c or master.

It looks like in your .blend Surface modifier is absent when we open it and it appears when we remove force field.

I can re-add force field and remove it a second time and this time, Surface modifier is gone.

Can you explain how you made a mesh with a Surface Force Field that does not have a Surface modifier ?

I confirm the problem with attached blend but I can't reproduce from scratch with 2.78c or master. It looks like in your .blend Surface modifier is absent when we open it and it appears when we remove force field. I can re-add force field and remove it a second time and this time, Surface modifier is gone. Can you explain how you made a mesh with a Surface Force Field that does not have a Surface modifier ?
Author

Add for example Bevel modifier to default cube. When adding Force Field, you need to choose Charge force and switch it to Surface type. Then try to delete the force

Add for example Bevel modifier to default cube. When adding Force Field, you need to choose Charge force and switch it to Surface type. Then try to delete the force

Added subscriber: @mont29

Added subscriber: @mont29

I tried to reproduce the issue following your steps, with no success so far… We really need a valid way to reproduce it to be able to investigate.

I tried to reproduce the issue following your steps, with no success so far… We really need a valid way to reproduce it to be able to investigate.
Author

Ok, I recorded steps from above (made from default scene):
0001-0354.mp4

Ok, I recorded steps from above (made from default scene): [0001-0354.mp4](https://archive.blender.org/developer/F729424/0001-0354.mp4)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Bastien Montagne self-assigned this 2017-08-27 12:02:28 +02:00

Tried those exact steps with current master, and could not reproduce the issue. I could reproduce it with official 2.78c though, so I’ll assume this has already been fixed one way or the other.

Please always try the latest build from our buildbot.

Tried those exact steps with current master, and could not reproduce the issue. I could reproduce it with official 2.78c though, so I’ll assume this has already been fixed one way or the other. Please always try the latest build from [our buildbot](https://builder.blender.org/download).

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Arrrg!

Actually, could reproduce it…

Arrrg! Actually, could reproduce it…

This issue was referenced by c16a98bb06

This issue was referenced by c16a98bb068b93a5f111078480236bdf027ebd1d

This issue was referenced by dcebad773f

This issue was referenced by dcebad773fd47f8f90d92af5e0c0a3115f44b621

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52498
No description provided.