Fix T52498: Deleting force field doesn't remove "Surface" from modifier stack.

Logic in `ED_object_check_force_modifiers` was inconsistent between add
and remove modifier cases.

Should be safe enough for 2.79.